// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeListItem /> Should render favorited state 1`] = `
Array [
  <li
    className="py2 border-bottom border-bottom-dashed pointer nowrap"
    onClick={[Function]}
  >
    <div
      className="inline-block animated mr1"
      onClick={[Function]}
      role="button"
    >
      ✅
    </div>
    <span>
      Test recipe
       
    </span>
    <span>
      Dessert
    </span>
    <span>
      <a
        className="text-decoration-none"
        href="/recipe/1"
        onClick={[Function]}
      >
        <span
          aria-label="detail"
          className="ml1"
          onClick={[Function]}
          role="img"
        >
          ➕
        </span>
      </a>
    </span>
  </li>,
  ",",
]
`;

exports[`<RecipeListItem /> Should render passed recipe 1`] = `
Array [
  <li
    className="py2 border-bottom border-bottom-dashed pointer nowrap"
    onClick={[Function]}
  >
    <div
      className="inline-block animated mr1"
      onClick={[Function]}
      role="button"
    >
      ⬜️
    </div>
    <span>
      Test recipe
       
    </span>
    <span>
      Dessert
    </span>
    <span>
      
    </span>
  </li>,
  ");",
]
`;
